# transcriber-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.whisper.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bot/: Dockerfile  bot.py  config.py
bot/bot/: handler.go
bot/whisper/: client.go
whisper/: server.py
