[tool.poetry]
name = "transcriber-bot"
version = "0.1.0"
description = "Telegram bot for transcribing voice messages and video notes"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.0"
grpcio = "^1.62"
protobuf = ">=5.0"
python-dotenv = "^1.0.0"
faster-whisper = "^1.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.62"
mypy-protobuf = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
